Refine the paper, adding references and relevant literature
Revise the paper by adding a more detailed caption, refining the estimand, and improving the discussion section. Enhance the abstract and findings by incorporating specific numbers and results from the study.

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -63,3 +63,129 @@
     note = {R package version 1.3.0},
     url = {https://CRAN.R-project.org/package=scales},
   }
+  
+@report{broadway2021,
+  title        = {Broadway Theaters: An Economic Engine for New York},
+  author       = {New York State Department of Labor},
+  year         = {2021},
+  institution  = {New York State Department of Labor},
+  url          = {https://dol.ny.gov/system/files/documents/2021/03/broadway-theaters-an-economic-engine-for-new-york.pdf},
+  note         = {Accessed: December 2, 2024}
+}
+
+@misc{playbill_grosses,
+  author       = {Playbill},
+  title        = {Grosses List},
+  year         = {2024},
+  url          = {https://playbill.com/grosses},
+  note         = {Accessed: December 2, 2024}
+}
+
+@misc{cookson_broadway_grosses,
+  author       = {Cookson, Thomas A.},
+  title        = {Broadway Grosses Dataset},
+  year         = {2020},
+  url          = {https://github.com/tacookson/data/tree/master/broadway-grosses},
+  note         = {Accessed: December 2, 2024}
+}
+
+@misc{broadway_statistics,
+  author       = {The Broadway League},
+  title        = {Statistics - Broadway in NYC},
+  year         = {2024},
+  url          = {https://www.broadwayleague.com/research/statistics-broadway-nyc/},
+  note         = {Accessed: December 2, 2024}
+}
+
+@misc{ibdb_about,
+  author       = {Internet Broadway Database (IBDB)},
+  title        = {About - Internet Broadway Database},
+  year         = {2024},
+  url          = {https://www.ibdb.com/About},
+  note         = {Accessed: December 2, 2024}
+}
+
+@book{stanley2013america,
+  title={America's Favorite Holidays},
+  author={Stanley, Richard T},
+  year={2013},
+  publisher={iUniverse}
+}
+
+@inproceedings{hodge202021st,
+  title={21st-century Broadway musicals and the ‘Best Musical’Tony Award: trends and impact},
+  author={Hodge, Matthew},
+  booktitle={Arts},
+  volume={9},
+  number={2},
+  pages={58},
+  year={2020},
+  organization={MDPI}
+}
+
+@article{boyle2009broadway,
+  title={Broadway productions and the value of a Tony Award},
+  author={Boyle, Melissa and Chiou, Lesley},
+  journal={Journal of Cultural Economics},
+  volume={33},
+  pages={49--68},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{reddy1998exploring,
+  title={Exploring the determinants of Broadway show success},
+  author={Reddy, Srinivas K and Swaminathan, Vanitha and Motley, Carol M},
+  journal={Journal of Marketing Research},
+  volume={35},
+  number={3},
+  pages={370--383},
+  year={1998},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{leslie2004price,
+  title={Price discrimination in Broadway theater},
+  author={Leslie, Phillip},
+  journal={RAND Journal of Economics},
+  pages={520--541},
+  year={2004},
+  publisher={JSTOR}
+}
+
+@article{ozhegova2018heterogeneity,
+  title={Heterogeneity in demand for performances and seats in the theatre},
+  author={Ozhegova, Alina and Ozhegov, Evgeniy M},
+  journal={Journal of Revenue and Pricing Management},
+  volume={17},
+  pages={131--145},
+  year={2018},
+  publisher={Springer}
+}
+
+@article{pearce2013minds,
+  title={Minds on the move: New links from psychology to tourism},
+  author={Pearce, Philip L and Packer, Jan},
+  journal={Annals of tourism research},
+  volume={40},
+  pages={386--411},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@misc{broadway_demographics_2022,
+  author       = {The Broadway League},
+  title        = {The Demographics of the Broadway Audience: 2022–2023 Season},
+  year         = {2023},
+  url          = {https://lede-admin.nyc.streetsblog.org/wp-content/uploads/sites/48/2024/07/Broadway-NY-Demographic-2022-2023.pdf},
+  note         = {Accessed: December 2, 2024}
+}
+
+@misc{broadway_research_reports,
+  author       = {The Broadway League},
+  title        = {Research Reports - The Broadway League},
+  year         = {2024},
+  url          = {https://www.broadwayleague.com/research/research-reports/},
+  note         = {Accessed: December 2, 2024}
+}
+
